...
  final DateTime dueDate;
  final IOUStatus status;
  final String icon;
  final DateTime createdAt;
  final DateTime updatedAt;

  IOU({
    required this.iouId,
    required this.userId,
    required this.type,
    required this.personName,
    String? partyName,
    this.personEmail,
...
